Change portfolio owner name and details
Updated the portfolio details to reflect the owner's name and background.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Your Name | Portfolio</title>
+  <title>Natali Dzneladze | Portfolio</title>
   <meta name="description" content="Economics student portfolio – projects in forecasting, policy, and data analysis." />
-  <meta property="og:title" content="Your Name | Portfolio" />
+  <meta property="og:title" content="Natali | Portfolio" />
   <meta property="og:description" content="Projects in forecasting, policy, and data analysis." />
   <meta property="og:type" content="website" />
   <link rel="icon" href="/assets/favicon.png" />
@@ -15,7 +15,7 @@
 <body>
   <header class="site-header">
     <div class="container">
-      <h1>Your Name</h1>
+      <h1>Natali Dzneladze</h1>
       <p class="tagline">Economics & Data • Forecasting • Policy Analysis</p>
       <nav class="nav">
         <a href="#projects">Projects</a>
@@ -28,14 +28,13 @@
 
   <main class="container">
     <section id="intro" class="card">
-      <h2>Hi, I’m Your Name 👋</h2>
+      <h2>Hi, I’m Natali 👋</h2>
       <p>
-        I study Economics and Management at Bocconi and focus on forecasting, macro policy,
-        and clear communication of analysis. I’ve worked with FPAS Mark II ideas, central bank
-        communication, and the monetary transmission mechanism.
+        a student of Economics, Management, and Computer Science at Bocconi University. During my internship at the National Bank of Georgia, 
+        I worked at the intersection of data science and economic policy, using analytical tools to turn complex ideas into clear, visual, and impactful insights.
       </p>
       <p>
-        This site highlights selected work: presentations, visualizations, and writing.
+        My interests center on how modern forecasting and artificial intelligence can enhance economic decision-making. This portfolio showcases my research, visual projects, and reflections on how we can rethink economic systems to make them more transparent, data-driven, and sustainable.
       </p>
     </section>
 
