add article links to portfolio

--- a/index.html
+++ b/index.html
@@ -43,29 +43,24 @@
       <div class="grid">
         <!-- Duplicate a .project block for each project -->
         <article class="project">
-          <h3>Monetary Transmission Mechanism (Talk)</h3>
-          <p>20‑minute presentation connecting theory to policy using FPAS Mark II.
-          Slides and notes available.</p>
+          <h3>AI-Powered Forecasting in Central Banking</h3>
           <p>
-            <a class="btn" href="#" target="_blank" rel="noopener">View slides</a>
-            <a class="btn outline" href="#" target="_blank" rel="noopener">Read script</a>
+            Explores how predictive algorithms can improve GDP and inflation forecasting, 
+            helping central banks make timelier and more inclusive policy decisions.
+          </p>
+          <p>
+            <a class="btn" href="/assets/AI-Powered%20Forecasting%20in%20Central%20Banking.docx" target="_blank" rel="noopener">Read Paper (DOCX)</a>
           </p>
         </article>
+
         <article class="project">
-          <h3>Tariffs 2025 – Macro Impacts</h3>
-          <p>Short paper and charts on consumer prices, pass‑through, and scenarios.
-          Built in Python with reproducible code.</p>
+          <h3>The Algorithmic Economy — Who Really Benefits?</h3>
           <p>
-            <a class="btn" href="#" target="_blank" rel="noopener">Read article</a>
-            <a class="btn outline" href="#" target="_blank" rel="noopener">GitHub repo</a>
+            Analyzes how data-driven capitalism redistributes value and power, 
+            highlighting the need for equitable digital governance and algorithmic transparency.
           </p>
-        </article>
-        <article class="project">
-          <h3>FPAS Page Redesign</h3>
-          <p>Content strategy + wireframes for an FPAS Mark II‑aligned public webpage.
-          Includes rationale and before/after.</p>
           <p>
-            <a class="btn" href="#" target="_blank" rel="noopener">Case study</a>
+            <a class="btn" href="/assets/The%20Algorithmic%20Economy..docx" target="_blank" rel="noopener">Read Essay (DOCX)</a>
           </p>
         </article>
       </div>
