Change document links from DOCX to PDF format

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             helping central banks make timelier and more inclusive policy decisions.
           </p>
           <p>
-            <a class="btn" href="/assets/AI-Powered%20Forecasting%20in%20Central%20Banking.docx" target="_blank" rel="noopener">Read Paper (DOCX)</a>
+            <a class="btn" href="/assets/AI-Powered%20Forecasting%20in%20Central%20Banking.pdf" target="_blank" rel="noopener">Read Paper (DOCX)</a>
           </p>
         </article>
 
@@ -60,7 +60,7 @@
             highlighting the need for equitable digital governance and algorithmic transparency.
           </p>
           <p>
-            <a class="btn" href="/assets/The%20Algorithmic%20Economy..docx" target="_blank" rel="noopener">Read Essay (DOCX)</a>
+            <a class="btn" href="/assets/The%20Algorithmic%20Economy..pdf" target="_blank" rel="noopener">Read Essay (DOCX)</a>
           </p>
         </article>
       </div>
