changes to about

--- a/index.html
+++ b/index.html
@@ -27,17 +27,19 @@
   </header>
 
   <main class="container">
-    <section id="intro" class="card">
-      <h2>Hi, I’m Natali 👋</h2>
+    
+    <section id="about" class="card">
+      <h2>About</h2>
       <p>
-        a student of Economics, Management, and Computer Science at Bocconi University. During my internship at the National Bank of Georgia, 
-        I worked at the intersection of data science and economic policy, using analytical tools to turn complex ideas into clear, visual, and impactful insights.
+        I’m Natali Dzneladze, a student of Economics, Management, and Computer Science at Bocconi University. I’m passionate about how data, policy, and technology can work together to make economies more transparent and forward-looking.
       </p>
-      <p>
-        My interests center on how modern forecasting and artificial intelligence can enhance economic decision-making. This portfolio showcases my research, visual projects, and reflections on how we can rethink economic systems to make them more transparent, data-driven, and sustainable.
-      </p>
+      <ul class="bullets">
+        <li>Skills: Python (pandas, matplotlib), R studio, SQL, LaTex, Microsoft Office Suite, Stata</li>
+        <li>Languages: English (Fluent) · Georgian (Native) · Italian (Intermediate) · Russian (Fluent), Korean (Beginner) </li>
+        <li>Currently: Economics & Management @ Bocconi</li>
+      </ul>
     </section>
-
+    
     <section id="projects" class="card">
       <h2>Projects</h2>
       <div class="grid">
@@ -64,20 +66,6 @@
           </p>
         </article>
       </div>
-    </section>
-
-    <section id="about" class="card">
-      <h2>About</h2>
-      <p>
-        I’m interested in how transparent forecasting frameworks help policymakers avoid
-        past mistakes and communicate uncertainty. I enjoy building clear visuals and
-        lightweight web pages to make analysis accessible.
-      </p>
-      <ul class="bullets">
-        <li>Skills: Python (pandas, matplotlib), basic R, HTML/CSS, Figma</li>
-        <li>Topics: FPAS Mark II, expectations, policy transmission</li>
-        <li>Currently: Economics & Management @ Bocconi</li>
-      </ul>
     </section>
 
     <section id="cv" class="card">
